# model-viewer

./: .gitignore  .gitmodules  CMakeLists.txt
source/: main.c  material.c  material.h  mesh.c  mesh.h  model.c  model.h  obj_loader.c  obj_loader.h  shader.c  shader.h  shaders.h  texture.c  texture.h  vertex.h
source/glad/: glad.c  glad.h
